[package]
name = "rust-cron"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "rust_cron"

[dependencies]
tokio = { version = "^1.3.0", features = ["full"] }
anyhow = "1.0.57"
cron_clock = "0.8.0"
snowflake = "1.3.0"

thiserror = "1.0.31"